# joern-to-neo4j

./: .gitignore  BEST_PRACTICES_md  DOCUMENTATION.md  MCP_SERVER.md  README.md  fixes.txt  joern_mcp.py  joern_to_neo4j.py  main.py  pyproject.toml
joern_output/neo4j_csv/: edges_ALIAS_OF_data.csv  edges_ARGUMENT_data.csv  edges_AST_data.csv  edges_BINDS_data.csv  edges_CALL_data.csv  edges_CAPTURE_data.csv  edges_CDG_data.csv  edges_CFG_data.csv  edges_CONDITION_data.csv  edges_CONTAINS_data.csv  edges_DOMINATE_data.csv  edges_EVAL_TYPE_data.csv  edges_IMPORTS_data.csv  edges_INHERITS_FROM_data.csv  edges_IS_CALL_FOR_IMPORT_data.csv  edges_PARAMETER_LINK_data.csv  edges_POST_DOMINATE_data.csv  edges_REACHING_DEF_data.csv  edges_RECEIVER_data.csv  edges_REF_data.csv  edges_SOURCE_FILE_data.csv  edges_TAGGED_BY_data.csv  nodes_ANNOTATION_PARAMETER_ASSIGN_cypher.csv  nodes_ANNOTATION_PARAMETER_ASSIGN_data.csv  nodes_ANNOTATION_PARAMETER_ASSIGN_header.csv  nodes_ANNOTATION_PARAMETER_cypher.csv  nodes_ANNOTATION_PARAMETER_data.csv  nodes_ANNOTATION_cypher.csv  nodes_ANNOTATION_data.csv  nodes_ANNOTATION_header.csv  nodes_BINDING_data.csv  nodes_BLOCK_data.csv  nodes_CALL_cypher.csv  nodes_CALL_data.csv  nodes_CALL_header.csv  nodes_CLOSURE_BINDING_data.csv  nodes_CONFIG_FILE_data.csv  nodes_CONTROL_STRUCTURE_data.csv  nodes_DEPENDENCY_data.csv  nodes_FIELD_IDENTIFIER_data.csv  (+40 more)
