[project]
name = "joern"
version = "0.1.0"
description = "Tool to automate the process of analyzing source code with Joern and importing the resulting Code Property Graph (CPG) into Neo4j"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neo4j>=5.14.0",
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.0",
    "anthropic>=0.18.1",
    "pydantic-ai>=1.0.0",
    "fastmcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
